--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
-    
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
