--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/bcryptjs": "^2.4.3",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
   },
