--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
