--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
